Make sure links wrapping images match the same line height (same as within the tree-view)

--- a/core-bundle/contao/themes/flexible/styles/components/picker.pcss
+++ b/core-bundle/contao/themes/flexible/styles/components/picker.pcss
@@ -28,6 +28,10 @@
         align-items: center;
         gap: 3px;
     }
+
+    li a:has(>img) {
+        display: flex;
+    }
 }
 
 .selector_container p {
